...
                                    <constraint firstAttribute="trailing" secondItem="sJ3-fB-uoh" secondAttribute="trailing" id="6gT-nX-iaP"/>
                                    <constraint firstAttribute="bottom" secondItem="sJ3-fB-uoh" secondAttribute="bottom" id="Esg-Wm-kxI"/>
                                    <constraint firstItem="sJ3-fB-uoh" firstAttribute="height" secondItem="Owl-lt-xEl" secondAttribute="height" id="Tid-wd-KZt"/>
                                    <constraint firstItem="sJ3-fB-uoh" firstAttribute="top" secondItem="Owl-lt-xEl" secondAttribute="top" id="lRO-su-u6L"/>
                                </constraints>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="zoomScrollView"/>
                                </userDefinedRuntimeAttributes>
                                <connections>
                                    <outlet property="delegate" destination="qtH-h7-sYv" id="jvm-dW-SUA"/>
                                </connections>
                            </scrollView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ovR-lg-E7o">
                                <rect key="frame" x="5" y="30" width="24" height="24"/>
                                <accessibility key="accessibilityConfiguration" identifier="backButton"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="24" id="5cn-dk-mzC"/>
                                    <constraint firstAttribute="width" constant="24" id="ZRw-OD-Jx9"/>
                                </constraints>
                                <state key="normal" image="left-arrow"/>
                                <connections>
...
