...
                <constraint firstAttribute="bottom" secondItem="nZH-Vg-ote" secondAttribute="bottom" id="asN-Li-aDH"/>
                <constraint firstItem="nZH-Vg-ote" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="pZE-4U-SVy"/>
            </constraints>
            <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
            <size key="customSize" width="120" height="102"/>
            <userDefinedRuntimeAttributes>
                <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="imageCell"/>
            </userDefinedRuntimeAttributes>
            <connections>
                <outlet property="imageView" destination="nZH-Vg-ote" id="6pE-85-qi8"/>
            </connections>
            <point key="canvasLocation" x="75" y="132"/>
        </collectionViewCell>
...
